src/components/Button.module.css
.container {
    width: 50%;
    margin: 0 auto;
}


.button {
    display: inline-block;
    padding: 0.6em 1.2em;
    overflow: hidden;
    font-size: 1em;
    font-weight: 500;
    font-family: inherit;
    cursor: pointer;
    transition: border-color 0.25s;
    text-decoration: none; /* Quitar subrayado de enlace */

    font-size: smaller;
    border-radius: 8px;
    border: 1px solid transparent;
    background-color: var(--background);
    border-color: var(--color);
    color: var(--color);
    border-radius: 15vh;
    width: 100%;
    white-space: nowrap;
    text-align: center;
}

.button:hover {
    border-color: var(--hover);
    color: var(--color);
}
.button:focus,
.button:focus-visible {
    outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
    .button {
        background-color: #f9f9f9;
    }
}

